2008-04-16  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Geoff.
        
        - add documentation (and meaningful parameter names) for arithmetic and bitwise binary ops

        * VM/CodeBlock.cpp:
        (KJS::CodeBlock::dump):
        * VM/CodeGenerator.cpp:
        (KJS::CodeGenerator::emitMul):
        (KJS::CodeGenerator::emitDiv):
        (KJS::CodeGenerator::emitMod):
        (KJS::CodeGenerator::emitSub):
        (KJS::CodeGenerator::emitLeftShift):
        (KJS::CodeGenerator::emitRightShift):
        (KJS::CodeGenerator::emitUnsignedRightShift):
        (KJS::CodeGenerator::emitBitAnd):
        (KJS::CodeGenerator::emitBitXOr):
        (KJS::CodeGenerator::emitBitOr):
        * VM/CodeGenerator.h:
        * VM/Machine.cpp:
        (KJS::Machine::privateExecute):
        * VM/Opcode.h:
        * kjs/nodes.cpp:
        (KJS::MultNode::emitCode):
        (KJS::DivNode::emitCode):
        (KJS::ModNode::emitCode):
        (KJS::SubNode::emitCode):
        (KJS::LeftShiftNode::emitCode):
        (KJS::RightShiftNode::emitCode):
        (KJS::UnsignedRightShiftNode::emitCode):
        (KJS::BitAndNode::emitCode):
        (KJS::BitXOrNode::emitCode):
        (KJS::BitOrNode::emitCode):
        (KJS::emitReadModifyAssignment):
        (KJS::ReadModifyResolveNode::emitCode):

2008-04-16  Oliver Hunt  <oliver@apple.com>

        Reviewed by Geoff.

        Exception checks for toNumber in op_pre_inc

        This is somewhat more convoluted than the simple hadException checks
        we currently use.  Instead we use special toNumber conversions that
        select between the exception and ordinary vPC.  This allows us to 
        remove any branches in the common case (incrementing a number).

        * API/JSCallbackObject.h:
        * API/JSCallbackObjectFunctions.h:
        (KJS::::toNumber):
        * ChangeLog:
        * JavaScriptCore.exp:
        * JavaScriptCore.xcodeproj/project.pbxproj:
        * VM/JSPropertyNameIterator.cpp: